Предыстории - обновление до актуального статуса